@@ -31,6 +31,8 @@ Release 0.19.0 - Unreleased
                log java.io.IOException: Could not get block locations. Aborting...
    HBASE-926   If no master, regionservers should hang out rather than fail on
                connection and shut themselves down
+   HBASE-919   Master and Region Server need to provide root region location if
+               they are using HTable
 
   IMPROVEMENTS
    HBASE-901   Add a limit to key length, check key and value length on client side
